clusters/production/media/sonarr/sonarr-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: sonarr
        securityContext:
          allowPrivilegeEscalation: false
        image: linuxserver/sonarr:4.0.20 # {"$imagepolicy": "flux-system:sonarr"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8989
        startupProbe:
          tcpSocket:
            port: 8989
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8989
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8989
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: sonarr-downloads
          mountPath: /downloads
        - name: sonarr-videos
          mountPath: /videos
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: pvc-sonarr-config
      - name: sonarr-downloads
        persistentVolumeClaim:
          claimName: pvc-media-downloads
      - name: sonarr-videos
        persistentVolumeClaim:
          claimName: pvc-media-videos
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 8989
    targetPort: 8989
  type: ClusterIP
