clusters/production/media/sonarr/sonarr-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - sonarr.rees.ca
  rules:
  - backendRefs:
    - name: sonarr
      port: 8989
