clusters/production/media/sonarr/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "sonarr.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarr
            port:
              number: 8989
